--- a/Recursive Fibonacci/fibonacci.ipynb
+++ b/Recursive Fibonacci/fibonacci.ipynb
@@ -9,19 +9,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5! = 120\n"
+      "10th Fibonacci number = 34\n"
      ]
     }
    ],
    "source": [
-    "def factorial(x):\n",
-    "    if x == 1:\n",
+    "def fibonacci(n):\n",
+    "    if n<= 0:\n",
+    "        print(\"Incorrect input\")\n",
+    "    elif n == 1:\n",
+    "        return 0\n",
+    "    elif n == 2:\n",
     "        return 1\n",
-    "    return x * factorial(x - 1)\n",
-    "number = int(input(\"Enter a integer\"))\n",
-    "res = factorial(number)\n",
+    "    else:\n",
+    "        return fibonacci(n-1)+fibonacci(n-2)\n",
     "\n",
-    "print(f\"{number}! = {res}\")"
+    "number = int(input(\"Enter a integer\"))\n",
+    "res = fibonacci(number)\n",
+    "\n",
+    "print(f\"{number}th Fibonacci number = {res}\")"
    ]
   }
  ],
